manifests/multi-cluster/frankfurt3/service-entries.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-a
  namespace : service-a
spec:
  hosts:
  - service-a.service-a.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 1.1.1.1 # cluster1
      network: cluster2
      ports:
        http: 81
    - address: 1.1.1.2 # cluster1
      network: cluster2
      ports:
        http: 81
    - address: 1.1.1.3 # cluster1
      network: cluster2
      ports:
        http: 8001
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-b
  namespace : service-b
spec:
  hosts:
  - service-b.service-b.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 10.1.1.1 # cluster1
      network: cluster2
      ports:
        http: 81
    - address: 10.1.1.2 # cluster1
      network: cluster2
      ports:
        http: 81
    - address: 10.1.1.3 # cluster1
      network: cluster2
      ports:
        http: 81
