manifests/multi-cluster/frankfurt3/virtualservices.yml
# Existing VirtualService deployed from routes. It should be attached to
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: site
  namespace: service-a
spec:
  gateways:
    - istio-system/internal-ingress # frankfurt3: internal/cross-cluster ingress gateway
    - smart/clever-ingress-gateway  # frankfurt1: internal/cross-cluster ingress gateway
    - traveler-frontend/traveler    # frankfurt1: external ingress-sidecar enabled ingress gateway
    - istio-system/external-ingress # frankfurt3: external ingress-sidecar enabled ingress gateway
    - mesh
  hosts:
    - www.example.com
  http:
    - route:
        - destination:
            host: service-a.service-a.svc.cluster.local
---
# Generated VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: site
  namespace: service-a
spec:
  gateways:
    - istio-system/internal-ingress # frankfurt3: internal/cross-cluster ingress gateway
    - smart/clever-ingress-gateway  # frankfurt1: internal/cross-cluster ingress gateway
  hosts:
    - service-a.service-a
  http:
    - route:
        - destination:
            host: service-a.service-a.svc.cluster.local
---
# Generated VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: site
  namespace: service-b
spec:
  gateways:
    - istio-system/internal-ingress # frankfurt3: internal/cross-cluster ingress gateway
    - smart/clever-ingress-gateway  # frankfurt1: internal/cross-cluster ingress gateway
  hosts:
    - service-b.service-b
  http:
    - route:
        - destination:
            host: service-b.service-b.svc.cluster.local
